重新修改漢堡的位置，把它從 header 移到main_sidebox 裡面，並改成 label

--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ body{
     height: 100vh;
 }
 
-
+/* #header-------------------- */
 #header{
     width: 100%;
     height: 56px;
@@ -78,26 +78,28 @@ body{
 }
 
 
+
+/* #main------------------------- */
 #main{
     width: 100%;
     height: calc(100% - 56px);
     background: powderblue;
 }
 #main #main_sidebox{
-    float: left;
+    display: inline-block;
+    /* 打開漢堡選單後的寬 */
+    width: 240px;
     /* 關掉漢堡選單後的寬 */
     width: 72px; 
-    /* 打開漢堡選單後的寬 */
-    width: 20%;
     height: 100%;
     background: salmon;
 }
 #main #main_video{
-    float: right;
+    display: inline-block;
     /* 打開側欄後的寬 */
-    width: calc(100% - 72px);
+    width: calc(100% - 240px);
     /* 關掉側欄後的寬 */
-    width: 80%;
+    width: calc(100% - 72px);
     height: 100%;
     background: seagreen;
 }
