main_sidebox 改為 inline-block，main_video 保持float

--- a/css/style.css
+++ b/css/style.css
@@ -95,7 +95,7 @@ body{
     background: salmon;
 }
 #main #main_video{
-    display: inline-block;
+    float: right;
     /* 打開側欄後的寬 */
     width: calc(100% - 240px);
     /* 關掉側欄後的寬 */
