幾乎快把 checkbar 給做完了
1.checkbar 排版
2.將圖片置換成網址，而非自己的 image 裡

--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@ time, mark, audio, video {
 	margin: 0;
 	padding: 0;
 	border: 0;
+    box-sizing: border-box;
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
@@ -51,7 +52,9 @@ body{
     width: 100vw;
     height: 100vh;
 }
-
+hr{
+    margin: 0;
+}
 /* #header-------------------- */
 #header{
     width: 100%;
@@ -105,27 +108,66 @@ body{
 /* sidebar---------------------- */
 .sidebar{
     display: inline-block;
+    /* font-size: 0; */
 
     width: 240px;
     height: 100%;
+    overflow: auto;
     background: skyblue;
 
     /* margin-left: -168px; */
 
     position: relative;
 }
-.sidebar label{
-    width: 24px;
-    height: 24px;
-    background: ;
-    display: block;
-    color: white;
+.hamburger{
+    height: 57px;
     text-align: center;
-    line-height: 30px;
-
-
+    position: relative;
+    padding-right: 0;
+    padding-left: 16px;
+}
+.hamburger .btn{
     position: absolute;
-    right: -15px;
-    top: 50%;
-    transform: translateY(-50%);
+    
+    line-height: 57px;
+}
+.btn label{
+    font-size: 22px;
+    color: grey;
+}
+.hamburger .logo{
+    position: absolute;
+    
+    top: 10px;
+    left: 40px;
+    /* display: none; */
+}
+
+input:checked+.sidebar{
+    margin-left: 0;
+}
+
+
+.list{
+    line-height: 40px;
+    padding-top: 12px;
+    padding-bottom: 16px;
+    /* padding: 12px 16px 12px; */
+    
+    
+}
+.list li:hover{
+    background: grey;
+}
+
+.list a{
+    text-decoration: none;
+    font-size: 13px;
+}
+.detail{
+    line-height: 1rem;
+    padding-top: 12px;
+    padding-left: 16px;
+    padding-right: 16px;
+    margin-bottom: 16px;
 }
