--- a/css/style.css
+++ b/css/style.css
@@ -134,6 +134,8 @@ input:checked+.sidebar{
     font-size: 0;
     background: yellow;
     position: fixed;
+    z-index: 0;
+
 }
 /* #header_left--------*/
 #header_left{
@@ -239,6 +241,8 @@ input:checked+.sidebar{
     height: calc(100% - 56px);
     position: absolute;
     top: 56px;
+    overflow-x: hidden;
+    font-size: 0;
 }
 #main #main_left{
     float: left;
@@ -262,12 +266,78 @@ input:checked+.sidebar{
     text-decoration: none;
     font-size: 20px;
     color: rgb(80, 76, 76);
+    cursor: pointer;
 }
 
 #main #main_right{
     float: right;
     width: calc(100% - 72px);
     background: seagreen;
+    margin: 8px auto;
+    z-index: -9999;
+
 }
-
-
+.all_box{
+    margin: auto;
+    padding: 8px;
+}
+.box{
+    width: 25%;
+    display: inline-block;
+    /* margin: 16px 8px; */
+    padding: 8px;
+    background: brown;
+    position: relative;
+}
+.box_bigImg img{
+    max-width: 100%;
+    max-height: 100%;
+}
+.box_describe{
+    height: 94px;
+    margin: auto;
+    padding: 15px 10px;
+    background: steelblue;
+    
+}
+.box_describe a{
+    text-decoration: none;
+    color: black;
+}
+.box_smallImg{
+    float: left;
+    max-width: 20%;
+}
+.box_smallImg img{
+    width: 36px; 
+    height:36px; 
+    border-radius: 50%;
+}
+.box_describe .box_title{
+    float: left;
+    max-width: 80%;
+    /* max-height: 100%; */
+    padding-left: 8px;
+    text-overflow : ellipsis;
+    white-space: nowrap;
+    overflow : hidden;
+    
+}
+.box_main_title{
+    max-width: 100%;
+    max-height: 40px;
+    text-overflow : ellipsis;
+    white-space: nowrap;
+    overflow : hidden;
+}
+.box_title .name{
+    font-size: 14px;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    white-space: normal;
+}
+.box_title .sideName{
+    color: rgb(80, 77, 77);
+    font-size: 14px;
+}
