--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ time, mark, audio, video {
 	border: 0;
     box-sizing: border-box;
 	font-size: 100%;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Noto Sans TC', sans-serif;
 	font: inherit;
 	vertical-align: baseline;
 }
@@ -65,7 +65,7 @@ hr{
     width: 240px;
     height: 100%;
     overflow-x: hidden;
-    background: skyblue;
+    background: white;
 
     margin-left: -240px;
 
@@ -89,7 +89,7 @@ hr{
     display: inline-block;
     width: 153px;
     height: 56px;
-    background: slateblue;
+    background: rgb(255, 255, 255);
     position: relative;
 }
 input:checked+.sidebar{
@@ -102,13 +102,16 @@ input:checked+.sidebar{
     line-height: 40px;
     padding-top: 12px;
     padding-bottom: 16px;
+    color: rgb(97, 95, 95);
 }
 .list li:hover{
-    background: grey;
+    background: rgba(128, 128, 128, 0.199);
+    cursor: pointer;
 }
 .list a{
     text-decoration: none;
-    font-size: 13px;
+    font-size: 14px;
+    color: rgb(97, 95, 95);
 }
 .detail{
     line-height: 1rem;
@@ -132,7 +135,7 @@ input:checked+.sidebar{
     width: 100%;
     height: 56px;
     font-size: 0;
-    background: yellow;
+
     position: fixed;
     z-index: 0;
 
@@ -147,7 +150,6 @@ input:checked+.sidebar{
     display: inline-block;
     width: 72px;
     height: 56px;
-    background: palevioletred;
     
     position: relative;
 }
@@ -165,7 +167,6 @@ input:checked+.sidebar{
     display: inline-block;
     width: 168px;
     height: 56px;
-    background: royalblue;
     position: relative;
 }
 .logo img{
@@ -175,36 +176,38 @@ input:checked+.sidebar{
 }
 /* #header_middle-------*/
 #header_middle{
-    display: inline-block;
-    width: calc(100%-440px); /*為何包不進去?QQ*/
+    float: left;
+    width: calc(100% - 440px); /*為何包不進去?QQ 因為 clac 的減號需要空白*/
+    height: 56px;
+}
+#searchBlank{
     height: 56px;
     position: relative;
 }
-#searchBlank{
-    height: 56px;    
-    background: lightpink;
-}
-#searchBlank input{  
-    width: 20em;
+.textBox{
     height: 56px;
-    padding: 2px 6px;
-    margin: 10px auto;
-}
-#searchBlank button{
-    width: 65px;
-    height: 33px;
-    padding: 1px 6px;
-    margin-top: 10px;
+    width: 75%;
+
     position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    padding-top: 12px;
 }
-#searchBlank .micro{
-    width: auto;
+.textBox button{
+    width: 65px;
+    height: 30px;
+    background: rgba(221, 216, 216, 0.295);
+    border: 0.5px solid rgba(128, 128, 128, 0.425);
+    border-radius: 2px;
+}
+.textBox button:hover{
+    cursor: pointer;
+}
+.textBox .micro{
+    float: right;
     height: 40px;
     padding: 8px;
-    background: lightgreen;
-    position: absolute;
-    right: 10px;
-    margin-top: 10px;
 }
 
 /* #header_right--------*/
@@ -213,21 +216,22 @@ input:checked+.sidebar{
     width: 200px;
     height: 56px;
     padding-left: 8px;
-    background: rgb(205, 50, 153);
 }
 #header_right #iconList li{
     display: inline-block;
     width: 40px;
     height: 40px;
+    color: rgb(109, 104, 104);
     padding: 8px;
     margin-top: 8px;
-    background: rgb(178, 176, 199);
+}
+#header_right #iconList li:hover{
+    cursor: pointer;
 }
 #iconList a{
     position: absolute;
     right: 16px;
     top: 13px;
-
 }
 .icon{
     font-size: 20px;
@@ -250,8 +254,6 @@ input:checked+.sidebar{
     height: 100%;
     text-align: center;
     position: fixed;
-
-    background: salmon;
 }
 .main_icon{
     width: 72px;
@@ -259,23 +261,23 @@ input:checked+.sidebar{
     padding: 16px 0 14px 0;
 }
 .main_icon:hover{
-    background: rgba(128, 128, 128, 0.377);
+    background: rgba(128, 128, 128, 0.199);
 }
 .main_icon a{
     display: block;
     text-decoration: none;
     font-size: 20px;
-    color: rgb(80, 76, 76);
+    color: rgb(109, 104, 104);
     cursor: pointer;
 }
 
 #main #main_right{
     float: right;
     width: calc(100% - 72px);
-    background: seagreen;
-    margin: 8px auto;
+    background: rgba(230, 227, 227, 0.253);
+    margin: auto;
+    padding: 10px;
     z-index: -9999;
-
 }
 .all_box{
     margin: auto;
@@ -284,9 +286,7 @@ input:checked+.sidebar{
 .box{
     width: 25%;
     display: inline-block;
-    /* margin: 16px 8px; */
     padding: 8px;
-    background: brown;
     position: relative;
 }
 .box_bigImg img{
@@ -297,8 +297,6 @@ input:checked+.sidebar{
     height: 94px;
     margin: auto;
     padding: 15px 10px;
-    background: steelblue;
-    
 }
 .box_describe a{
     text-decoration: none;
@@ -316,7 +314,6 @@ input:checked+.sidebar{
 .box_describe .box_title{
     float: left;
     max-width: 80%;
-    /* max-height: 100%; */
     padding-left: 8px;
     text-overflow : ellipsis;
     white-space: nowrap;
@@ -325,7 +322,7 @@ input:checked+.sidebar{
 }
 .box_main_title{
     max-width: 100%;
-    max-height: 40px;
+    max-height: 60%;
     text-overflow : ellipsis;
     white-space: nowrap;
     overflow : hidden;
@@ -338,6 +335,8 @@ input:checked+.sidebar{
     white-space: normal;
 }
 .box_title .sideName{
+    height: 40%;
     color: rgb(80, 77, 77);
     font-size: 14px;
+    padding-top: 8px;
 }
